tests/syntax_error/missing_return_type_method.jou
class Foo:
    def bar(self):  # Error: return type must be specified with '->', or with '-> None' if the method doesn't return anything
        return
